# moe_grouped_gemm

./: .gitignore  README.md  ops.py  setup.py
csrc/: CMakeLists.txt  common.h  extensions.h  pybind.cu  sinkhorn.cu
csrc/groupedgemm/: cublas_wrapper.h  groupedgemm_varK.cu  groupedgemm_varM.cu
csrc/groupedgemm/cutlass_extensions/: groupedgemm_kernels.h  groupedgemm_kernels_bf16_bf16_bf16.cu  groupedgemm_kernels_bf16_bf16_fp16.cu  groupedgemm_kernels_bf16_bf16_fp32.cu  groupedgemm_kernels_fp16_fp16_bf16.cu  groupedgemm_kernels_fp16_fp16_fp16.cu  groupedgemm_kernels_fp16_fp16_fp32.cu  groupedgemm_kernels_fp32_fp32_bf16.cu  groupedgemm_kernels_fp32_fp32_fp16.cu  groupedgemm_kernels_fp32_fp32_fp32.cu  groupedgemm_problem_desc.h  groupedgemm_traits.h  groupedgemm_varK_template.h  groupedgemm_varM_template.h
csrc/permute/: permute.cu  permute_kernels.h  unpermute.cu
tests/: __init__.py  test_gmm_perf_comp.py  test_permuteTopK.py  test_sinkhorn.py  test_torch_ops.py  test_unit_func.py
